--- a/environment.env
+++ b/environment.env
@@ -6,7 +6,7 @@ DNAC_PASS = 'apiuser123!'
 HTTP_BASIC_AUTH = 'Basic ZGVtb3RtZTphcGl1c2VyMTIzIQ=='
 
 # Webhook URL, username and password
-WEBHOOK_URL = 'https://10.93.141.48:5000/dnacenter_report'
+WEBHOOK_URL = 'https://10.93.141.48:5000/compliance_check'
 WEBHOOK_USERNAME = 'admin'
 WEBHOOK_PASSWORD = 'rece!v3r06'
 
